# OpenDKIM

./: .cvsignore  .gitattributes  .gitignore  BRANCHES  Doxyfile  FEATURES  HowToRelease  INSTALL  KNOWNBUGS  LICENSE  LICENSE.Sendmail  Makefile.am  Makefile.in  ProjectGuide  README  README.ERLANG  RELEASE_NOTES  RELEASE_NOTES.Sendmail  TODO  announcement  autogen.sh  build-config.h.in  buildtest  configure  configure.ac  copyright-check
autobuild/: .gitignore  Makefile.am  autobuild.8  autobuild.c  autobuild.conf.sample
contrib/: .cvsignore  .gitignore  Makefile.am  README  README.opendkim-reportstats  authheaders-check-setup-hook.lua  convert_keylist.sh  opendkim-reportstats  opendkim-sendstats  opendkim.init  opendkim.spec  opendkim.spec.in
contrib/OpenRC/: .gitignore  Makefile.am  opendkim.openrc.in.in
contrib/convert/: Makefile.am  README  convert_keylist.sh
contrib/docs/: Makefile.am  README  chroot
contrib/init/: Makefile.am  README
contrib/ldap/: Makefile.am  README.LDAP  example.com.ldif  opendkim.ldif  opendkim.schema
contrib/lua/: Makefile.am  README  authheaders-check-setup-hook.lua
contrib/patches/: Makefile.am  README  opendkim-spam-ignore-cmdswitch.patch
contrib/reputation/: README
contrib/repute/: Makefile.am  repute.py
contrib/spec/: Makefile.am  README  opendkim.spec.in
contrib/stats/: Makefile.am  README  README.opendkim-reportstats  opendkim-fixipaddrs.pl  opendkim-reportstats  stats.lua
contrib/systemd/: .gitignore  Makefile.am  README  opendkim.service.in  opendkim.tmpfiles.in
docs/: Makefile.am  README.specs.html  draft-gregorio-uritemplate-07.txt  draft-gregorio-uritemplate-08.txt  draft-ietf-dkim-deployment-05.txt  draft-ietf-dkim-deployment-07.txt  draft-ietf-dkim-deployment-08.txt  draft-ietf-dkim-deployment-09.txt  draft-ietf-dkim-deployment-10.txt  draft-ietf-dkim-deployment-11.txt  draft-ietf-dkim-implementation-report-00.txt  draft-ietf-dkim-implementation-report-01.txt  draft-ietf-dkim-implementation-report-02.txt  draft-ietf-dkim-implementation-report-03.txt  draft-ietf-dkim-implementation-report-04.txt  draft-ietf-dkim-implementation-report-05.txt  draft-ietf-dkim-implementation-report-06.txt  draft-ietf-dkim-mailinglists-00.txt  draft-ietf-dkim-mailinglists-01.txt  draft-ietf-dkim-mailinglists-02.txt  draft-ietf-dkim-mailinglists-03.txt  draft-ietf-dkim-mailinglists-04.txt  draft-ietf-dkim-mailinglists-05.txt  draft-ietf-dkim-mailinglists-06.txt  draft-ietf-dkim-mailinglists-08.txt  draft-ietf-dkim-mailinglists-09.txt  draft-ietf-dkim-mailinglists-10.txt  draft-ietf-dkim-mailinglists-11.txt  draft-ietf-dkim-mailinglists-12.txt  draft-ietf-dkim-rfc4871-errata-07.txt  draft-ietf-dkim-rfc4871bis-15.txt  draft-ietf-dkim-ssp-10.txt  draft-ietf-marf-as-08.txt  draft-ietf-marf-as-10.txt  draft-ietf-marf-as-11.txt  draft-ietf-marf-as-13.txt  draft-ietf-marf-authfailure-report-01.txt  draft-ietf-marf-authfailure-report-02.txt  draft-ietf-marf-authfailure-report-03.txt  draft-ietf-marf-authfailure-report-04.txt  (+85 more)
libar/: .cvsignore  Makefile.am  Makefile.in  README  ar-socket.c  ar-socket.h  ar-strl.c  ar-strl.h  ar.3  ar.c  ar.h  ar.pc.in  async-resolv.h  manual.c  manual.h
libar/tests/: .cvsignore  Makefile  Makefile.am  Makefile.in  ar-test00.c  ar-test01.c
libdkimrep/: Makefile.am  dkim-rep.3  dkim-rep.c  dkim-rep.h  dkim-rep.pc.in
libdkimrep/tests/: .gitignore  Makefile.am  dr-test00.c
libiprange/: Makefile.am  iprange.3  iprange.c  iprange.h  iprange.pc.in
libopendkim/: .cvsignore  .gitignore  Makefile.am  Makefile.in  README  base32.c  base32.h  base64.c  base64.h  dkim-atps.c  dkim-cache.c  dkim-cache.h  dkim-canon.c  dkim-canon.h  dkim-dns.c  dkim-dns.h  dkim-internal.h  dkim-keys.c  dkim-keys.h  dkim-mailparse.c  dkim-mailparse.h  dkim-policy.c  dkim-policy.h  dkim-rep.c  dkim-rep.h  dkim-report.c  dkim-report.h  dkim-strl.c  dkim-strl.h  dkim-tables.c  dkim-tables.h  dkim-test.c  dkim-test.h  dkim-types.h  dkim-ub.c  dkim-ub.h  dkim-util.c  dkim-util.h  dkim.c  dkim.h  (+147 more)
librbl/: Makefile.am  rbl.3  rbl.c  rbl.h  rbl.pc.in
libstrl/: .gitignore  Makefile.am  strl.3  strl.c  strl.h  strl.pc.in
libut/: .gitignore  Makefile.am  ut.3  ut.c  ut.h  ut.pc.in
libvbr/: Makefile.am  libvbr.la  vbr.3  vbr.c  vbr.h  vbr.lo  vbr.pc.in
miltertest/: .cvsignore  Makefile.am  miltertest.1  miltertest.8  miltertest.c
opendkim/: .cvsignore  .gitignore  Makefile.am  Makefile.in  README  README.SQL  autorespond.csh  config.c  config.h  final.lua.sample  flowrate.c  flowrate.h  opendkim-ar.c  opendkim-ar.h  opendkim-arf.c  opendkim-arf.h  opendkim-atpszone  opendkim-atpszone.8.in  opendkim-atpszone.c  opendkim-config.h  opendkim-crypto.c  opendkim-crypto.h  opendkim-db.c  opendkim-db.h  opendkim-dns.c  opendkim-dns.h  opendkim-genkey.8  opendkim-genkey.8.in  opendkim-genkey.in  opendkim-genkey.sh  opendkim-genzone.8.in  opendkim-genzone.c  opendkim-lua.3  opendkim-lua.3.in  opendkim-lua.c  opendkim-lua.h  opendkim-spam.1.in  opendkim-spam.c  opendkim-stats.8  opendkim-stats.8.in  (+28 more)
reprrd/: .gitignore  Makefile.am  README  TODO  opendkim-reprrdimport.8.in  opendkim-reprrdimport.in  reprrd-config.php  reprrd.c  reprrd.h  reprrd.pc.in  reprrd.php
reputation/: .gitignore  Makefile.am  README  mkdb-rep.mysql  mkdb.mysql  opendkim-genrates.8.in  opendkim-genrates.in  opendkim-genrates.pl.in  opendkim-modtotals.8.in  opendkim-modtotals.in  opendkim-rephistory.8.in  opendkim-rephistory.in  opendkim-repute.8.in  opendkim-repute.pl.in  repute-config.php  repute.c  repute.h  repute.pc.in  repute.php
stats/: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.opendkim-reportstats  mkdb.mysql  opendkim-anonstats.8.in  opendkim-anonstats.c  opendkim-expire.8.in  opendkim-expire.in  opendkim-gengraphs  opendkim-gengraphs.8.in  opendkim-gengraphs.in  opendkim-genrates  opendkim-genrates.pl  opendkim-genrates.pl.in  opendkim-genstats  opendkim-genstats.8.in  opendkim-genstats.in  opendkim-importstats.8  opendkim-importstats.8.in  opendkim-importstats.c  opendkim-importstats.in  opendkim-importstats.sh  opendkim-reportstats.in
(+511 files in other folders)
